Correccion de mock up

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TaKazo</title>
+    <title>TaKzo</title>
     <!--------++ FAVICON ++-------->
     <link rel="shortcut icon" href="assets/img/taco.svg">
     <!--========= BOX ICONS  =========-->
@@ -46,7 +46,7 @@
     <section class="home" id="home">
         <div class="home__container bd-container bd-grid">
             <div class="home__data">
-                <h1 class="home__title"><span class="takzo-titulo">TAKAZO</span></h1>
+                <h1 class="home__title"><span class="takzo-titulo">TAKZO</span></h1>
                 <h2 class="home__subtitle">¡Prueba los mejores tacos!</h2>
                 <a href="#" class="button">Ver Menu</a>
             </div>
@@ -440,7 +440,7 @@
     <footer class="footer section bd-container">
         <div class="footer__container bd-grid">
             <div class="footer__content">
-                <a href="#" class="footer__logo"><span class="takzo-titulo">TAKAZO</span></a>
+                <a href="#" class="footer__logo"><span class="takzo-titulo">TAKZO</span></a>
                 <span class="footer__description">Restaurante</span>
 
                 <div>
