--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
         </div>
     </section>
 
-    <!--========= CONTACT US  =========-->
+    <!--========= CONTACTANOS  =========-->
     <section class="contact section bd-container id" id="contact">
         <div class="contact__container bd-grid">
             <div class="contact__data">
